<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">电力巡视系统</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="exit">退出</string>
    <string name="name">用户名</string>
    <string name="psw">密码</string>
    <string name="rempsw">记住密码</string>
    <string name="finished">已完成的任务</string>
    <string name="unfinished">未完成的任务</string>
    <string name="back">返回</string>
    <string name="lingqurenwu">领取任务</string>
    <string name="liulanrenwu">浏览任务</string>
    <string name="dangqianrenwu">当前任务</string>
    <string name="xinxiguanli">信息管理</string>
    <string name="symbol">乘以</string>
    <string name="calculate">计算</string>
    <string name="dialog_message">结束日期错误，请重新选取</string>
    <string name="dialog_title">错误提示</string>
    <string name="OK">确定</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="edit_save">保存修改</string>
    <string name="change_pass">修改密码</string>
    <string name="device1">设备1</string>
    <string name="voltage">电压正常</string>
    <string name="wire">电线完好无损</string>
    <string name="opsw">当前密码：</string>
    <string name="newpsw1">新密码：</string>
    <string name="newpsw2">确认密码：</string>
    <string name="normal">√</string>
    <string name="abnormal">×</string>
    <string name="hello">Hello World, CaptureActivity!</string>

    <string-array name="label_array">
        <item>√</item>
        <item>×</item>
    </string-array>

    <string name="title_activity_tasklet_pull">TaskletPull</string>
    <string name="title_activity_tasklet_item_pull">TaskletItemPull</string>
    <string name="title_activity_change_passwd">Change_passwd</string>
    <string name="title_activity_item_args">ItemArgs</string>
    <string name="title_activity_error_handling">ErrorHandling</string>
    <string name="title_activity_edit">Edit</string>
    <string name="title_activity_tasklet_push">TaskletPush</string>
    <string name="title_activity_history_task_look">HistoryTaskLook</string>
    <string name="title_activity_stuff_info_pull">StuffInfoPull</string>
    <string name="title_activity_tasklet_pull_return">TaskletPull_return</string>
    <string name="title_activity_undone_task">UndoneTask</string>
    <string name="title_activity_task_now">TaskNow</string>

</resources>