<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="20dip"
    android:background="@drawable/login"
     >
     <TextView
        android:id="@+id/name"
        android:layout_width="80dip"
        android:layout_height="40dip"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="18sp"
        android:textStyle="bold" >
    </TextView>

    <EditText
        android:id="@+id/username"
        android:layout_width="150dip"
        android:background="@android:drawable/editbox_background"
        android:layout_height="40dip"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/name"
        android:singleLine="true"
        android:text=""
        android:textSize="18sp" >
    </EditText>

    <TextView
        android:id="@+id/psw"
        android:layout_width="80dip"
        android:layout_height="40dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/name"
        android:text="@string/psw"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold" >
    </TextView>
    <EditText
        android:id="@+id/userpsw"
        android:layout_width="150dip"
        android:background="@android:drawable/editbox_background"
        android:layout_height="40dip"
        android:layout_toRightOf="@+id/psw"
        android:layout_alignBottom="@id/psw"
        android:layout_marginTop="10dip"
        android:layout_below="@+id/username"
        android:password="true"
        android:singleLine="true"
        android:text=""
        android:textSize="18sp" >
    </EditText>
    <CheckBox
        android:id="@+id/rempsw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userpsw"
        android:layout_below="@+id/userpsw"
        android:layout_marginTop="5dip"
        android:text="@string/rempsw"
        >
    </CheckBox>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/psw"
        android:layout_below="@+id/rempsw"
        android:layout_marginTop="30dip"
        android:text="@string/login"
        >
    </Button>

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/userpsw"
        android:layout_below="@+id/rempsw"
        android:layout_marginTop="30dip"
        android:text="@string/exit"
        >
    </Button>
</RelativeLayout>