<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/bkground"
     >
    <TextView
        android:id="@+id/opsw"
        android:layout_width="100dip"
        android:layout_height="50dip"
        android:layout_marginTop="100dip"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/opsw" />
    <EditText 
        android:id="@+id/user_opsw"
        android:layout_width="200dip"
        android:layout_height="50dip"
        android:layout_toRightOf="@+id/opsw"
        android:layout_alignBaseline="@+id/opsw"
        android:password="true"
        android:background="@android:drawable/editbox_background"
        />
    <TextView
        android:id="@+id/npsw1"
        android:layout_width="100dip"
        android:layout_height="50dip"
        android:text="@string/newpsw1"
        android:gravity="center"
        android:layout_marginTop="10dip"
        android:layout_below="@+id/opsw"
        android:layout_alignLeft="@+id/opsw"
        android:textSize="18sp"
         />
     <EditText 
        android:id="@+id/user_npsw1"
        android:layout_width="200dip"
        android:layout_height="50dip"
        android:layout_toRightOf="@+id/npsw1"
        android:layout_below="@+id/user_opsw"
        android:layout_alignBaseline="@+id/npsw1"
        android:password="true"
        android:background="@android:drawable/editbox_background"
        />
    <TextView
        android:id="@+id/npsw2"
        android:layout_width="100dip"
        android:layout_height="50dip"
        android:layout_marginTop="10dip"
        android:layout_below="@+id/npsw1"
        android:layout_alignLeft="@+id/opsw"
        android:textSize="18sp"
        android:gravity="center"
        android:text="@string/newpsw2" />
     <EditText 
        android:id="@+id/user_npsw2"
        android:layout_width="200dip"
        android:layout_height="50dip"
        android:layout_toRightOf="@+id/npsw2"
        android:layout_alignBaseline="@+id/npsw2"
        android:password="true"
        android:layout_below="@+id/user_npsw1"
        android:background="@android:drawable/editbox_background"
        />
     <Button 
         android:id="@+id/entry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/npsw2"
         android:layout_marginTop="30dip"
         android:layout_alignRight="@+id/npsw2"
         android:text="确定"
         />
   
</RelativeLayout>
